P2/controllers/ingress_app_config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  tls:
  - hosts:
      - app1
      - app2
      - app3
    secretName: tls-secret
  rules:
  - host: app1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
  - host: app2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
  - host: app3
  http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: app3
          port:
            number: 80
